"Animate Property" UI-dot-button does not insert key when the input is a Color [field, constant is OK] #93899

Closed
opened 2021-12-09 14:07:15 +01:00 by Julio Cargnin Pereira · 19 comments

System Information
Operating system: Linux-5.15.5-76051505-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: (newest version of Blender that worked as expected)

Short description of error
The ui-buttom that enables to insert a key-frame does not work when the input is a Color for the parameter exposed on the Geometry Nodes Modifier.
Exact steps for others to reproduce the error

Color-does-not-key.gif

  1. In Geometry Nodes Editor, create a parameter Color to your Group Input Node and Connect it to the Group Output Node.
  2. Try to press the dot-like button in the modifiers tab for the Color Attribute just exposed.
  3. Nothing will happen but the expected behavior would be keying the current state of the Color.
**System Information** Operating system: Linux-5.15.5-76051505-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: (newest version of Blender that worked as expected) **Short description of error** The ui-buttom that enables to insert a key-frame does not work when the input is a Color for the parameter exposed on the Geometry Nodes Modifier. **Exact steps for others to reproduce the error** ![Color-does-not-key.gif](https://archive.blender.org/developer/F12720116/Color-does-not-key.gif) 1. In Geometry Nodes Editor, create a parameter Color to your Group Input Node and Connect it to the Group Output Node. 2. Try to press the dot-like button in the modifiers tab for the Color Attribute just exposed. 3. Nothing will happen but the expected behavior would be keying the current state of the Color.

Added subscriber: @CosmoMidias

Added subscriber: @CosmoMidias

#93974 was marked as duplicate of this issue

#93974 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-12-09 16:29:57 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Will check (this was working at some point, see 570331ca96)

Will check (this was working at some point, see 570331ca96)
Member

Note: this is only failing for fields, constant colors connected there can be animated without problems

Note: this is only failing for fields, constant colors connected there can be animated without problems
Philipp Oeser changed title from "Animate Property" UI-dot-button does not insert key when the input is a Color to "Animate Property" UI-dot-button does not insert key when the input is a Color [field, constant is OK] 2021-12-09 16:43:45 +01:00
Member

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'
Philipp Oeser removed their assignment 2021-12-13 08:48:39 +01:00
Member

Added subscribers: @HooglyBoogly, @JacquesLucke, @dfelinto

Added subscribers: @HooglyBoogly, @JacquesLucke, @dfelinto
Member

Since this is only failing for fields, I suggest taking a step back and ask the following question(s):

  • if we create a group input, should it not default to being a single value/vector/color (circle socket icon)?
    • the default is a single value/vector/color in the modifier UI (only if you toggle to an attribute, this becomes a field)
    • even if you connect a "field-aware" socket to the group input node, it defaults to taking a single value/vector/color
  • also the icons in the Geometry Nodes Editor sidebar, Group tab, Input should change? (these stay circle icons all the time, however if an attribute is used as input, shouldnt these be diamonds as well? -- just as the Group Input node itself does?)

Would be happy to work on above changes, but I think it does not make sense to keyframe something that is marked with a diamond icon.
So will step down until this (design) question can be agreed upon.

CC @HooglyBoogly
CC @JacquesLucke
CC @dfelinto

Since this is only failing for fields, I suggest taking a step back and ask the following question(s): - if we create a group input, should it not default to being a single value/vector/color (circle socket icon)? - the default is a single value/vector/color in the modifier UI (only if you toggle to an attribute, this becomes a field) - even if you connect a "field-aware" socket to the group input node, it defaults to taking a single value/vector/color - also the icons in the Geometry Nodes Editor sidebar, Group tab, Input should change? (these stay circle icons all the time, however if an attribute is used as input, shouldnt these be diamonds as well? -- just as the Group Input node itself does?) Would be happy to work on above changes, but I think it does not make sense to keyframe something that is marked with a diamond icon. So will step down until this (design) question can be agreed upon. CC @HooglyBoogly CC @JacquesLucke CC @dfelinto
Member

Added subscribers: @krisoyo, @PratikPB2123

Added subscribers: @krisoyo, @PratikPB2123
Member

In #93899#1271233, @lichtwerk wrote:

  • also the icons in the Geometry Nodes Editor sidebar, Group tab, Input should change? (these stay circle icons all the time, however if an attribute is used as input, shouldnt these be diamonds as well? -- just as the Group Input node itself does?)

Note there is a patch [WIP] for this see D13168: UI: Use actual socket shapes in widget_nodesocket [WIP]

> In #93899#1271233, @lichtwerk wrote: > - also the icons in the Geometry Nodes Editor sidebar, Group tab, Input should change? (these stay circle icons all the time, however if an attribute is used as input, shouldnt these be diamonds as well? -- just as the Group Input node itself does?) Note there is a patch [WIP] for this see [D13168: UI: Use actual socket shapes in `widget_nodesocket` [WIP]](https://archive.blender.org/developer/D13168)
Member

the default is a single value/vector/color in the modifier UI (only if you toggle to an attribute, this becomes a field)

One important aspect you might be missing is that a node group does not know how it is used. For example, the node group does not know and should not care whether a single value or an attribute field is passed in from the modifier. The node group therefore has to deal with the case that both could be passed in by default (note that this could even happen when the node group is used in multiple modifiers). We could think about adding an option to turn a field input into a single value input. That might be useful in some cases, but generally, it should not be required.

Would be happy to work on above changes, but I think it does not make sense to keyframe something that is marked with a diamond icon.

It's a diamond/field within the node group. At the place where the node group is used, this value is exposed as "could be a field but can also be single value" (diamond with dot). Therefore it makes perfect sense to animate the single value.

I don't know what is causing the issue in this report exactly, but keyframing the value in the modifier should work regardless of whether it is a field or single value in the node group.

> the default is a single value/vector/color in the modifier UI (only if you toggle to an attribute, this becomes a field) One important aspect you might be missing is that a node group does not know how it is used. For example, the node group does not know and should not care whether a single value or an attribute field is passed in from the modifier. The node group therefore has to deal with the case that both could be passed in by default (note that this could even happen when the node group is used in multiple modifiers). We could think about adding an option to turn a field input into a single value input. That might be useful in some cases, but generally, it should not be required. > Would be happy to work on above changes, but I think it does not make sense to keyframe something that is marked with a diamond icon. It's a diamond/field within the node group. At the place where the node group is used, this value is exposed as "could be a field but can also be single value" (diamond with dot). Therefore it makes perfect sense to animate the single value. I don't know what is causing the issue in this report exactly, but keyframing the value in the modifier should work regardless of whether it is a field or single value in the node group.

“…but keyframing the value in the modifier should work regardless”

It is possible to animate the color only if you right click an chose from the menu or pressing “i” hovering over.

I thought this was just a simple UI task but it seems to have escalate…

“…but keyframing the value in the modifier should work regardless” It is possible to animate the color only if you right click an chose from the menu or pressing “i” hovering over. I thought this was just a simple UI task but it seems to have escalate…
Member

I agree, it should be simple ui task, not sure how simple it is in practice, haven't looked into it more yet.

I agree, it should be simple ui task, not sure how simple it is in practice, haven't looked into it more yet.
Philipp Oeser self-assigned this 2021-12-13 12:55:28 +01:00
Member

OK, will check again.

OK, will check again.
Philipp Oeser removed their assignment 2022-01-18 21:06:48 +01:00
Member

Will have to concentrate on triaging for a while (and step down).

Will have to concentrate on triaging for a while (and step down).
Hans Goudey self-assigned this 2022-04-28 20:44:24 +02:00
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

This issue was referenced by 3d9f0280ff

This issue was referenced by 3d9f0280ff1bc308aa31e95af6b1726f1b497111
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93899
No description provided.